@startuml

' Template file to use to create the diagrams od the packages.
' Every file must have a sub part called INTERNAL with the internal connections of the package and
' a sub part called EXTERNAL with the external parts.
skinparam linetype polyline
skinparam linetype ortho

!startsub INTERNAL

package src.engine.scene.transformation {
    class src.engine.scene.transformation.Transformation
    class src.engine.scene.transformation.LinearTransformation
    class src.engine.scene.transformation.FillNanTransformation
}

src.engine.scene.transformation.LinearTransformation -u-|> src.engine.scene.transformation.Transformation
src.engine.scene.transformation.FillNanTransformation -u-|> src.engine.scene.transformation.Transformation
!endsub

!startsub EXTERNAL
    src.engine.scene.transformation.Transformation <..> src.engine.scene.Scene
    src.engine.scene.transformation.LinearTransformation ..> src.error.TransformationError
    src.engine.scene.transformation.Transformation ..> src.error.TransformationError
    src.engine.scene.transformation.LinearTransformation ..> src.engine.scene.geometrical_operations
    src.engine.scene.transformation.Transformation ..> src.engine.scene.filter.Filter

    src.engine.scene.transformation.FillNanTransformation ..> src.engine.scene.geometrical_operations
    src.engine.scene.transformation.FillNanTransformation ..> src.error.TransformationError
!endsub


' Code that will affect only the current diagram
' can be messy since it will not be imported
hide members

@enduml